# engram

./: .env.example  README.md  VERIFICATION.md  compose.test.yml  pyproject.toml
engram/: __init__.py  app.py  chunker.py  config.py  embeddings.py  models.py  store.py
engram/clients/: docling.py
engram/clients/storage/: __init__.py  base.py  memory.py  minio.py
engram/jobs/: ingest.py  runner.py
engram/processors/: __init__.py  base.py  docling_file.py  docling_text.py  tiktoken_processor.py
migrations/: 0001.create_collections.sql  0002.create_documents_and_chunks.sql  0003.add_indexes.sql  0004.add_modality_and_chunker.sql  0005.create_ingest_jobs.sql  0006.add_document_object_storage.sql  0007.add_file_hash_to_ingest_jobs.sql
tests/: test_chunker.py  test_routes.py
tests/integration/: test_docling_real.py  test_end_to_end.py  test_storage_minio.py
tests/integration/fixtures/: sample.md
tests/unit/: test_docling_client.py  test_file_routes.py  test_ingest_jobs.py  test_processors.py  test_runner.py  test_storage_contract.py  test_storage_memory.py
